--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,8 +44,7 @@ repos:
         language: system
         files: ^elementary/.*\.py$
 
-  # Commented this out because docs changes are often not done by developers and therefore
-  # the pre-commit doesn't routinely run on the docs.
+  # Commenting out as it seems to fail even if there are no broken links.
   # - repo: https://github.com/CoderJoshDK/precommit-mintlify-validate/
   #   rev: v0.2.0
   #   hooks:
