--- a/.github/workflows/test-warehouse.yml
+++ b/.github/workflows/test-warehouse.yml
@@ -165,7 +165,7 @@ jobs:
         if: inputs.warehouse-type == 'postgres' || inputs.generate-data
         run: |
           python generate_data.py
-          dbt seed --target "${{ inputs.warehouse-type }}"
+          dbt seed -f --target "${{ inputs.warehouse-type }}"
 
       - name: Run e2e dbt project
         working-directory: ${{ env.E2E_DBT_PROJECT_DIR }}
