change docs to match dbt fusion (#2019)
* change docs to match dbt fusion

* fix broken links

* change comment

* add a mintlify hook that works

* dbt-fusion: initial page

* dbt-fusion page in docs side tree

* troubleshooting fixes

* dbt fusion guide - add more details about upgrading from dbt-core

* dbt-fusion: docs fixes

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,8 +44,11 @@ repos:
         language: system
         files: ^elementary/.*\.py$
 
-  - repo: https://github.com/CoderJoshDK/precommit-mintlify-validate/
-    rev: v0.2.0
+  - repo: local
     hooks:
       - id: mintlify-validate
-        args: [docs]
+        name: Mintlify validate
+        entry: bash -c "cd docs && mintlify broken-links | tee /dev/stderr | grep -q 'no broken links found'"
+        language: system
+        require_serial: true
+        pass_filenames: false
