--- a/elementary/monitor/dbt_project/packages.yml
+++ b/elementary/monitor/dbt_project/packages.yml
@@ -1,13 +1,13 @@
 packages:
   - package: dbt-labs/dbt_utils
     version: [">=0.8.0", "<0.9.0"]
-  # - package: elementary-data/elementary
-  #   version: 0.20.0
+  - git: https://github.com/elementary-data/dbt-data-reliability.git
+    revision: d257bdda1793ecff1f65ba9684a0e962d3a77114
 
   #  NOTE - for unreleased CLI versions we often need to update the package version to a commit hash (please leave this
   #  commented, so it will be easy to access)
-  - git: https://github.com/elementary-data/dbt-data-reliability.git
-    revision: 20b76374f7c1b6cc280af7652c720e6069499a19
-  #  When releasing a new version of the package, if the current version is using a commit hash,  update the version to the new version.
-  #- package: elementary-data/elementary
-  #  version: 0.20.0
+  # - git: https://github.com/elementary-data/dbt-data-reliability.git
+  #   revision: 20b76374f7c1b6cc280af7652c720e6069499a19
+  #  When releasing a new version of the package, if the current version is using a commit hash, update the version to the new version.
+  # - package: elementary-data/elementary
+  #   version: 0.20.0
