Configure stale workflow: mark stale after 60 days, close after 30 days, upgrade to v10

--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -11,9 +11,10 @@ jobs:
       issues: write
       pull-requests: write
     steps:
-      - uses: actions/stale@v5
+      - uses: actions/stale@v10
         with:
-          days-before-stale: 180
+          days-before-stale: 60
+          days-before-close: 30
           stale-issue-message: |
             This issue is stale because it has been open for too long with no activity.
             If you would like the issue to remain open, please remove the stale label or leave a comment.
