--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ networkx = ">=2.3,<3"
 packaging = ">=20.9"
 azure-storage-blob = ">=12.11.0"
 pymsteams = ">=0.2.2,<1.0.0"
+numpy = "*"
 tabulate = ">= 0.9.0"
 pytz = ">= 2025.1"
 
