--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ documentation = "https://docs.elementary-data.com"
 packages = [{include = "elementary"}]
 
 [tool.poetry.dependencies]
-# matches the versions supported by dbt as of v1.9, which are probably due to the limits of numpy 1.26.x
+# matches the versions supported by dbt as of v1.9, which are probably due to the limits of numpy 1.26.x(which was removed)
 python = ">=3.9,<3.13"
 click = ">=7.0,<9.0"
 dbt-core = ">=0.20,<2.0.0"
@@ -32,7 +32,6 @@ networkx = ">=2.3,<3"
 packaging = ">=20.9"
 azure-storage-blob = ">=12.11.0"
 pymsteams = ">=0.2.2,<1.0.0"
-numpy = "<2.0.0"
 tabulate = ">= 0.9.0"
 pytz = ">= 2025.1"
 
