--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,21 @@ readme = "README.md"
 homepage = "https://www.elementary-data.com"
 repository = "https://github.com/elementary-data/elementary"
 documentation = "https://docs.elementary-data.com"
+classifiers = [
+    "Natural Language :: English",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: Apache Software License",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Topic :: Software Development :: Libraries",
+]
 
 packages = [{include = "elementary"}]
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.14"
+python = ">=3.10,<3.14"
 click = ">=7.0,<9.0"
 dbt-core = ">=0.20,<2.0.0"
 requests = ">=2.28.1,<3.0.0"
