--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ beautifulsoup4 = "<5.0.0"
 ratelimit = "*"
 posthog = "<3.0.0"
 boto3 = "<2.0.0"
-google-cloud-storage = "<3.0.0"
+google-cloud-storage = ">=2.4,<3.2"
 "ruamel.yaml" = "<1.0.0"
 alive-progress = "<=2.3.1"
 slack-sdk = ">=3.20.1,<4.0.0"
