--- a/elementary/monitor/dbt_project/packages.yml
+++ b/elementary/monitor/dbt_project/packages.yml
@@ -1,8 +1,8 @@
 packages:
   - package: dbt-labs/dbt_utils
     version: [">=0.8.0", "<0.9.0"]
-  - git: https://github.com/elementary-data/dbt-data-reliability.git
-    revision: 9f64cbcaf72539cceb7a2b4b49db890c32f80d43
+   - package: elementary-data/elementary
+     version: 0.22.0
 
   #  NOTE - for unreleased CLI versions we often need to update the package version to a commit hash (please leave this
   #  commented, so it will be easy to access)
